objects/NBB__c.object
<CustomObject>
    <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
    <fields>
        <fullName>ATL_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>ATL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Historical_Linker_Id__c</fullName>
        <formula>Opportunity__r.Account.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Historical Linker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Account_Formal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binder_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>Binder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Binder_Year__c</fullName>
        <formula>TEXT(YEAR( NA_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Binder Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <formula>text( Program__r.Business_line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Goal_Annual__c</fullName>
        <label>CC Goal - Annual</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Goal_H1__c</fullName>
        <label>CC Goal - H1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Credit__c</fullName>
        <formula>NBB__c  *  Credit_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chairman_s_Goal_Annual__c</fullName>
        <label>Chairman&apos;s Goal - Annual</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chairman_s_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chairman&apos;s Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Counter_Id__c</fullName>
        <formula>Contract__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Counter Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Historical_Linker_Id__c</fullName>
        <formula>Contract__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Historical Linker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>NBB</relationshipLabel>
        <relationshipName>NBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Id__c</fullName>
        <displayFormat>NBB{0}</displayFormat>
        <label>Counter Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Credit_Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Credit Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Half__c</fullName>
        <formula>CASE( 
	Month( Today()), 
	1, &quot;H1&quot;, 
	2, &quot;H1&quot;, 
	3, &quot;H1&quot;, 
	4, &quot;H1&quot;, 
	5, &quot;H1&quot;, 
	6, &quot;H1&quot;, 
	7, &quot;H2&quot;, 
	8, &quot;H2&quot;, 
	9, &quot;H2&quot;, 
	10, &quot;H2&quot;, 
	11, &quot;H2&quot;, 
	12, &quot;H2&quot;, 
	&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows which half of the year we are currently in, based on Today&apos;s date.</inlineHelpText>
        <label>Current Half</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Quarter__c</fullName>
        <formula>CASE( Month( Today()), 1, &quot;Q1&quot;, 2, &quot;Q1&quot;, 3, &quot;Q1&quot;, 4, &quot;Q2&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q3&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, 10, &quot;Q4&quot;, 11, &quot;Q4&quot;, 12, &quot;Q4&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_YTD_ATL_NBB_Units__c</fullName>
        <description>Created for CR-20141217-8348</description>
        <formula>IF((YEAR(ATL_Date__c) = YEAR(TODAY())) &amp;&amp; (ATL_Date__c &lt;= TODAY()) , NBB_Units_for_Opp__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current YTD ATL NBB Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_YTD_ATL_NBB__c</fullName>
        <description>Created for CR-20141217-8348</description>
        <formula>IF((YEAR(ATL_Date__c) = YEAR(TODAY())) &amp;&amp; (ATL_Date__c &lt;=  TODAY()) , NBB_Total_for_Opp__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current YTD ATL NBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currrent_YTD_NBB__c</fullName>
        <description>Sifter #66</description>
        <formula>if(YEAR( NA_Date__c ) =Year(Today()), YTD_NBB_Credit__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currrent YTD NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currrent_Year_MTD_NBB__c</fullName>
        <description>Sifter #66</description>
        <formula>if(Year( NA_Date__c )=Year(Today()), MTD_NBB_Credit__c , 0)</formula>
        <label>Currrent Year MTD NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currrent_Year_QTD_NBB__c</fullName>
        <description>Sifter #66</description>
        <formula>if(Year( NA_Date__c )=Year(Today()), QTD_NBB_Credit__c , 0)</formula>
        <label>Currrent Year QTD NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_in_Current_Half_Year__c</fullName>
        <formula>IF(MONTH(TODAY()) &lt;= 6 &amp;&amp; MONTH(Date__c) &lt;= 6 &amp;&amp; YEAR(TODAY()) == YEAR(Date__c), &quot;Yes&quot;,
IF(MONTH(TODAY()) &gt; 6 &amp;&amp; MONTH(Date__c) &gt; 6 &amp;&amp; YEAR(TODAY()) == YEAR(Date__c), &quot;Yes&quot;,
&quot;No&quot;))</formula>
        <label>Date in Current Half-Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Multiplier__c</fullName>
        <description>Created for CR-20150319-8793.</description>
        <label>Goal Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Period__c</fullName>
        <label>Goal Period</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTD_NBB_Credit__c</fullName>
        <formula>IF( 
	AND(
		(NA_Date_Half__c = Current_Half__c ) ,
		(YTD_Date__c &lt;=  TODAY()) , 
		(YTD_Binder_Date__c  &lt;=  TODAY())
	),
	NBB__c , 
	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field counts the NBB on this record if it came within this current half of the year.</inlineHelpText>
        <label>HTD NBB Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Goal_Q1__c</fullName>
        <label>Incentive Goal - Q1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Goal_Q2__c</fullName>
        <label>Incentive Goal - Q2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Goal_Q3__c</fullName>
        <label>Incentive Goal - Q3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_NBB_Credit__c</fullName>
        <formula>If((date(year(today()),month(today()),1) &lt;= YTD_Date__c) &amp;&amp; (YTD_Date__c &lt;= today()) 
&amp;&amp;
(YTD_Binder_Date__c &lt;= today()), NBB__c , 0)</formula>
        <label>MTD NBB Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_NBB_Goal__c</fullName>
        <description>Sifter #66</description>
        <formula>IF(
AND( 
 ISPICKVAL(Goal_Period__c, &quot;Month&quot;),
 Month( NA_Date__c ) = Month(TODAY())
)
,  NBB_Goal__c , 0)</formula>
        <label>MTD NBB Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Actual_NBB_Credit__c</fullName>
        <description>Modified per Sifter #66</description>
        <formula>IF(
AND(
date(Year(today()),Month(Today()), 1)&lt;= YTD_Date__c ,
if(
month(today())=12, date(year(today())+1,1,1),
date(Year(today()), Month(Today())+1,1))&gt; YTD_Date__c , 
if(
month(today())=12, date(year(today())+1,1,1),
date(Year(today()), Month(Today())+1,1))&gt; YTD_Binder_Date__c), NBB__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Actual NBB Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NA_Date_Current_Month__c</fullName>
        <formula>IF(NOT(ISBLANK(NA_Date__c)),
IF(MONTH(NA_Date__c) == MONTH(TODAY()), &quot;Yes&quot;, &quot;No&quot;),
&quot;No&quot;)</formula>
        <label>NA Date Current Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Date_Current_Quarter__c</fullName>
        <formula>IF(NOT(ISBLANK(NA_Date__c)),

IF(MONTH(TODAY()) &gt;= 1 &amp;&amp; MONTH(TODAY()) &lt;= 3 &amp;&amp; MONTH(NA_Date__c) &gt;= 1 &amp;&amp; MONTH(NA_Date__c) &lt;= 3,
&quot;Yes&quot;,
IF(MONTH(TODAY()) &gt;= 4 &amp;&amp; MONTH(TODAY()) &lt;= 6 &amp;&amp; MONTH(NA_Date__c) &gt;= 4 &amp;&amp; MONTH(NA_Date__c) &lt;= 6,
&quot;Yes&quot;,
IF(MONTH(TODAY()) &gt;= 7 &amp;&amp; MONTH(TODAY()) &lt;= 9 &amp;&amp; MONTH(NA_Date__c) &gt;= 7 &amp;&amp; MONTH(NA_Date__c) &lt;= 9,
&quot;Yes&quot;,
IF(MONTH(TODAY()) &gt;= 10 &amp;&amp; MONTH(TODAY()) &lt;= 12 &amp;&amp; MONTH(NA_Date__c) &gt;= 10 &amp;&amp; MONTH(NA_Date__c) &lt;= 12,
&quot;Yes&quot;,
&quot;No&quot;)
)
)
),
&quot;No&quot;)</formula>
        <label>NA Date Current Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Date_Half__c</fullName>
        <formula>CASE( 
	MONTH( NA_Date__c ) ,  
	1, &quot;H1&quot;,
	2, &quot;H1&quot;, 
	3, &quot;H1&quot;, 
	4, &quot;H1&quot;, 
	5, &quot;H1&quot;, 
	6, &quot;H1&quot;, 
	7, &quot;H2&quot;, 
	8, &quot;H2&quot;, 
	9, &quot;H2&quot;, 
	10, &quot;H2&quot;, 
	11, &quot;H2&quot;, 
	12, &quot;H2&quot;, 
	&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows if the NA Date is in the first or the second half of the year.</inlineHelpText>
        <label>NA Date Half</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Date_Quarter__c</fullName>
        <formula>CASE( Month( NA_Date__c ), 1, &quot;Q1&quot;, 2, &quot;Q1&quot;, 3, &quot;Q1&quot;, 4, &quot;Q2&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q3&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, 10, &quot;Q4&quot;, 11, &quot;Q4&quot;, 12, &quot;Q4&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Date Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>NA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_Year__c</fullName>
        <formula>Year(NA_Date__c )</formula>
        <label>NA Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBB_Goal_Type__c</fullName>
        <label>NBB Goal Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBB_Goal__c</fullName>
        <label>NBB Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBB_Greater_Than_Large_Contract_Threshol__c</fullName>
        <formula>IF( NBB__c &gt;  Program__r.Large_Contract_Threshold__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NBB Greater Than Lrg Contract Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBB_Reporting_Groups__c</fullName>
        <formula>TEXT( Program__r.New_Business_Marketer__c )</formula>
        <label>NBB Reporting Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBB_Total_for_Opp__c</fullName>
        <formula>if( ISPICKVAL( NBB_Type__c , &quot;Base Fee&quot;) || ISPICKVAL( NBB_Type__c , &quot;Posted Risk&quot;) || ISPICKVAL( NBB_Type__c, &quot;Shadow Credit&quot;) , NBB__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NBB Total for Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBB_Type__c</fullName>
        <label>NBB Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base Fee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Future Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Year Recognizable NBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Kicker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optilink Guaranteed Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shadow Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Posted Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NBB_Units_for_Opp__c</fullName>
        <formula>if( ISPICKVAL( NBB_Type__c , &quot;Base Fee&quot;) || ISPICKVAL( NBB_Type__c , &quot;Posted Risk&quot;) || ISPICKVAL( NBB_Type__c, &quot;Shadow Credit&quot;), Unit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NBB Units for Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBB__c</fullName>
        <label>NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBB_at_Risk__c</fullName>
        <label>NBB at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Business_Business__c</fullName>
        <formula>TEXT(Program__r.New_Business_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Group__c</fullName>
        <formula>Text( Program__r.New_Business_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Vertical__c</fullName>
        <formula>TEXT(Program__r.New_Business_Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Historical_Linker_ID__c</fullName>
        <formula>Opportunity__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Historical Linker ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Large_Contract_Counter__c</fullName>
        <formula>Opportunity__r.Large_Contract_Counter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Large Contract Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Large_Contract__c</fullName>
        <formula>Opportunity__r.Large_Contract__c</formula>
        <label>Opportunity Large Contract?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NBB</relationshipLabel>
        <relationshipName>NBB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_ATL_NBB_Units__c</fullName>
        <formula>IF((YEAR(ATL_Date__c) = YEAR(TODAY()) - 1) &amp;&amp; ATL_Date__c &lt;= DATE( YEAR(TODAY()) - 1, MONTH(TODAY()), DAY(TODAY()) ) ,  NBB_Units_for_Opp__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev YTD ATL NBB Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_ATL_NBB__c</fullName>
        <description>Created for CR-20141217-8348</description>
        <formula>IF((YEAR(ATL_Date__c) = YEAR(TODAY()) - 1) &amp;&amp; ATL_Date__c &lt;= DATE( YEAR(TODAY()) - 1, MONTH(TODAY()), DAY(TODAY()) )  ,  NBB_Total_for_Opp__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev YTD ATL NBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_NBB__c</fullName>
        <description>Sifter #66</description>
        <formula>if(Year( NA_Date__c )=Year(Today())-1, YTD_NBB_Credit__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev YTD NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_ATL_NBB_Units__c</fullName>
        <description>Created for CR-20150626-9028.</description>
        <formula>IF( YEAR( ATL_Date__c ) =  YEAR( TODAY() )-1  , NBB_Units_for_Opp__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year ATL NBB Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_ATL_NBB__c</fullName>
        <description>Created for CR-20150626-9028.</description>
        <formula>IF(YEAR(ATL_Date__c)  =  YEAR(TODAY())-1 , NBB_Total_for_Opp__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year ATL NBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Year_MTD_NBB__c</fullName>
        <description>Sifter #66</description>
        <formula>if(Year( NA_Date__c )=Year(Today())-1, MTD_NBB_Credit__c , 0)</formula>
        <label>Prev Year MTD NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Month_Total__c</fullName>
        <description>Sifter #66</description>
        <formula>if(Year( NA_Date__c )=Year(Today())-1, Month_Actual_NBB_Credit__c ,0)</formula>
        <label>Prev Year Month Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_QTD_NBB__c</fullName>
        <description>Sifter #66</description>
        <formula>if(Year( NA_Date__c )=Year(Today())-1, QTD_NBB_Credit__c , 0)</formula>
        <label>Prev Year QTD NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Quarter_Total__c</fullName>
        <description>Sifter #66</description>
        <formula>If(and(Year( NA_Date__c )=Year(Today())-1, NA_Date_Current_Quarter__c  = &quot;Yes&quot;), NBB__c , 0)</formula>
        <label>Prev Year Quarter Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBM and Employee Health</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <formula>Program__r.Program_Acronym__c</formula>
        <label>Program Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code_del__c</fullName>
        <formula>Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Large_Contract_Threshold__c</fullName>
        <formula>Program__r.Large_Contract_Threshold__c</formula>
        <label>Program Large Contract Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>NBB</relationshipLabel>
        <relationshipName>NBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Goal_12m__c</fullName>
        <label>Promotion Goal - 12m</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Goal_6m__c</fullName>
        <label>Promotion Goal - 6m</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_NBB_Credit__c</fullName>
        <formula>If((NA_Date_Quarter__c = Current_Quarter__c) 
&amp;&amp; 
(YTD_Date__c &lt;= Today()) 
&amp;&amp; 
(YTD_Binder_Date__c &lt;= Today()), NBB__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD NBB Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_NBB_Goal__c</fullName>
        <description>Sifter #66</description>
        <formula>IF(
AND( 
 ISPICKVAL(Goal_Period__c, &quot;Quarter&quot;),
  NA_Date_Current_Quarter__c = &quot;Yes&quot;
)
,  NBB_Goal__c , 0)</formula>
        <label>QTD NBB Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_Actual_NBB_Credit__c</fullName>
        <formula>IF(
   NA_Date_Quarter__c = Current_Quarter__c
   &amp;&amp; 
   (YTD_Binder_Date__c &lt;= CASE(
                                                       NA_Date_Quarter__c,   &quot;Q1&quot;, date(year(today()),3,31),
                                                                                          &quot;Q2&quot;, date(year(today()),6,30),
                                                                                          &quot;Q3&quot;, date(year(today()),9,30), 
                                                                                          &quot;Q4&quot;, date(year(today()),12,31),
                                                  date(year(today()),12,28)
                                                    
   )
)
,NBB__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Actual NBB Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Group__c</fullName>
        <formula>Text( Program__r.Business_line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_EA_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>SA/EA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <description>Sifter #133-We need to add an &quot;RCP&quot; tag to the Sales Segment in the NBB object (the same way we tag EA revenue) to be able to track RC principal revenue correctly.</description>
        <label>Sales Role</label>
        <picklist>
            <picklistValues>
                <fullName>Rev Cycle Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <label>Sales Segment</label>
        <picklist>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA - National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA - Midwest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shadow_Credit_Type__c</fullName>
        <label>Shadow Credit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions_NBB__c</fullName>
        <description>Created for CR-20160609-9911.</description>
        <formula>AND(
(ATL_Date__c &gt;= Opportunity__r.Account.Solution_Adopted__c),
OR (
ISBLANK(Opportunity__r.Account.Solution_Ended__c),
Opportunity__r.Account.Solution_Ended__c &gt;= ATL_Date__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>NBB unit won during Payer Account’s Solutions membership.</inlineHelpText>
        <label>Solutions NBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ATL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BTL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NBB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Today_s_Date_Last_Year__c</fullName>
        <formula>IF(
Date__c = DATE
(YEAR(Date__c), MONTH(TODAY()), DAY(TODAY())),&quot;Yes&quot;, &quot;No&quot;
)</formula>
        <label>Today&apos;s Date Last Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Goal_H1__c</fullName>
        <label>Trip Goal - H1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trip_Goal_H2__c</fullName>
        <label>Trip Goal - H2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WTD_NBB_Credit__c</fullName>
        <description>changed per Sifter #66</description>
        <formula>IF(
AND(
NA_Date__c &gt;= (TODAY()-(MOD(TODAY() - (DATE (2011 ,7, 18)) ,7))), NA_Date__c &lt;=TODAY(), YTD_Binder_Date__c&lt;=TODAY() ), NBB__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WTD NBB Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Binder_Date__c</fullName>
        <formula>IF(
	AND(
		(MONTH(Binder_Date__c) = 2), 
		(DAY(Binder_Date__c) = 29)
	),
	DATE( 
		YEAR( TODAY() ) 
		+ 
		(
			YEAR(Binder_Date__c) 
			- 
			YEAR(NA_Date__c)
		) , 
		2 , 
		28
	) ,
	DATE( 
		YEAR( TODAY() ) 
		+ 
		(
			YEAR(Binder_Date__c) 
			- 
			YEAR(NA_Date__c)
		) , 
		MONTH( Binder_Date__c ) , 
		Day(Binder_Date__c)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Binder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_Date__c</fullName>
        <formula>IF(
	AND((MONTH(NA_Date__c) = 2), 
		(DAY(NA_Date__c) = 29)
		),
	DATE( YEAR( TODAY() ) , 2 , 28) ,
	DATE( YEAR( TODAY() ) , MONTH( NA_Date__c ) , Day(NA_Date__c))
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_Date_in_Current_Month__c</fullName>
        <formula>IF(MONTH(YTD_Date__c) == MONTH(TODAY()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Date in Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Date_in_Current_Quarter__c</fullName>
        <formula>CASE(MONTH(YTD_Date__c),
1, CASE(MONTH(TODAY()), 1, 1, 2, 1, 3, 1, 0),
2, CASE(MONTH(TODAY()), 1, 1, 2, 1, 3, 1, 0),
3, CASE(MONTH(TODAY()), 1, 1, 2, 1, 3, 1, 0),
4, CASE(MONTH(TODAY()), 4, 1, 5, 1, 6, 1, 0),
5, CASE(MONTH(TODAY()), 4, 1, 5, 1, 6, 1, 0),
6, CASE(MONTH(TODAY()), 4, 1, 5, 1, 6, 1, 0),
7, CASE(MONTH(TODAY()), 7, 1, 8, 1, 9, 1, 0),
8, CASE(MONTH(TODAY()), 7, 1, 8, 1, 9, 1, 0),
9, CASE(MONTH(TODAY()), 7, 1, 8, 1, 9, 1, 0),
10, CASE(MONTH(TODAY()), 10, 1, 11, 1, 12, 1, 0),
11, CASE(MONTH(TODAY()), 10, 1, 11, 1, 12, 1, 0),
12, CASE(MONTH(TODAY()), 10, 1, 11, 1, 12, 1, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Date in Current Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>